Update some things

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,42 @@
-<p>home works!</p>
+    <div class="container-fluid">
+       <img  class="img-fluid" [src]="imgPath" alt="sdfsf">
+       <div class="centered">Centered</div>
+<div >
+    <div class="jumbotron">
+        <h1 class="display-4">Bienvenue!!!</h1>
+        <p class="lead">Vous aimez la biologie? vous etes Senegalais(e)?Ce site publie l'actualité de la biologie au Senegal et au niveau international</p>
+    </div>
+</div>
+<div class="row">
+  <div class="col-12 col-lg-4">
+    <div class="card mb-4 mb-lg-0 border-primary shadow">
+      <img src="" alt="certificate" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">Devenez diplômé</h5>
+        <p class="card-text">De zéro à héros, obtenez un diplôme en informatique.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-lg-4">
+    <div class="card mb-4 mb-lg-0 border-primary shadow">
+      <img src="" alt="instructor" class="card-img-top">
+      <div class="card-body">
+      <h5 class="card-title">Formateurs de qualités</h5>
+      <p class="card-text">Tous nos cours sont réalisés par les meilleurs informaticiens.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-lg-4">
+    <div class="card mb-4 mb-lg-0 border-primary shadow">
+      <img src="" alt="job search" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">Un travail graranti</h5>
+        <p class="card-text">Nous vous garantissons un emploi à l'issue de votre formation.</p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+
+
