--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid" *ngIf='!isAuthAdmin' >
 <nav class="navbar navbar-light bg-primary navbar-expand-lg">
    <a class="navbar-brand" routerLink="home">Logo</a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,3 +25,4 @@
    
 </div>
  </nav>
+</div>
