--- a/src/app/admin/removepost/removepost.component.html
+++ b/src/app/admin/removepost/removepost.component.html
@@ -6,10 +6,13 @@
         <h1>Suppression d'un post</h1>
     </div>
     </div>
-   <div *ngFor='let post of AllPosts' class="row list-group-item">
-     
-    <span><h3  >Titre du post:{{post.title}} <h4 style="float: right;">Crée le{{post.date}}</h4></h3> </span><br>
+   <div   *ngFor='let post of AllPosts' class="row list-group-item">
+  
+    <span>
+        <h4>Titre du post:{{post.title}}</h4> <h4 style="float: right;">Crée le{{post.date}}</h4> 
+   <br>
 <p>Id du post:{{post.id}}</p>
+</span>
 <div class="row">
     
         <div class="col-2  col-md-2 col-lg-2" style="float: right;" >    
@@ -17,3 +20,4 @@
        </div>
    </div>
    </div> 
+</div>
