--- a/src/app/posts/single-posts/single-posts.component.html
+++ b/src/app/posts/single-posts/single-posts.component.html
@@ -1,1 +1,11 @@
-<p>single-posts works!</p>
+<div class="container-fluid">
+<div >
+    <h1>{{title}}<h4 style="float: right;">Créé le {{date}}</h4></h1>
+   
+
+</div>
+<div id='content'>
+  </div>
+  
+
+</div>
