Update some stuffs

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,15 @@
     <div class="container-fluid">
-       <img  class="img-fluid" [src]="imgPath" alt="sdfsf">
-       <div class="centered">Centered</div>
-<div >
+      <div class=" col-xs-12">
+        <div class="hovereffect">
+          <img [src]="imgPath" class="img-responsive hoverable" alt="Header image">
+          <div class="overlay">
+               <h2>Bienvenue</h2>
+               <a class="info" href="#">Voir les articles</a>
+            </div>
+        </div>
+    </div>
+     
+     <div >
     <div class="jumbotron">
         <h1 class="display-4">Bienvenue!!!</h1>
         <p class="lead">Vous aimez la biologie? vous etes Senegalais(e)?Ce site publie l'actualité de la biologie au Senegal et au niveau international</p>
