--- a/src/app/posts/single-posts/single-posts.component.html
+++ b/src/app/posts/single-posts/single-posts.component.html
@@ -1,11 +1,69 @@
 <div class="container-fluid">
-<div >
-    <h1>{{title}}<h4 style="float: right;">Créé le {{date}}</h4></h1>
-   
+  <div>
+    <h1>{{title}}<h4 style="float: right;">Créé le {{date}}</h4>
+    </h1>
 
-</div>
-<div id='content'>
+
+  </div>
+  <div id='content'>
   </div>
   
+  <br><br>
+  <div *ngIf='!isAuth'>
+    <a routerLink="/auth/signin" style="height: 50px;" class="btn btn-primary col-12" type="button">Connecter vous pour
+      commenter</a>
+  </div>
 
+  <div *ngIf='isAuth'>
+    <h1 class="text-center">Commenter et donner une note </h1>
+    <form [formGroup]="ratingForm" (ngSubmit)='onSubmit()'>
+      <div class="rating">
+        <input id="radio1" type="radio" (change)='getValue($event.target.value)' name="star" value="5" class="star" />
+        <label for="radio1">&#9733;</label>
+        <input id="radio2" type="radio" (change)='getValue($event.target.value)' name="star" value="4" class="star" />
+        <label for="radio2">&#9733;</label>
+        <input id="radio3" type="radio" (change)='getValue($event.target.value)' name="star" value="3" class="star" />
+        <label for="radio3">&#9733;</label>
+        <input id="radio4" type="radio" (change)='getValue($event.target.value)' name="star" value="2" class="star" />
+        <label for="radio4">&#9733;</label>
+        <input id="radio5" type="radio" (change)='getValue($event.target.value)' name="star" value="1" class="star" />
+        <label for="radio5">&#9733;</label>
+      </div>
+      <div class="form-group">
+        <textarea name="" id="" class="form-control" id="comment" name="comment" formControlName="comment" cols="30"
+          rows="4"></textarea>
+      </div>
+      <button class="btn btn-success col" [disabled]="ratingForm.invalid">Envoyer</button>
+    </form>
+  </div>
+  <br><br><br>
+  <div class="container">
+    <h3 class="text-center">Commentaires</h3>
+
+    <div *ngFor="let userComment of usersCommentArray" class="card">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-2">
+            <img *ngIf='userPhoto' [src]="userPhoto" class="img img-rounded img-fluid" />
+      
+            <img *ngIf='!userPhoto' src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid" />
+            <p class="text-secondary text-center">{{userComment.commentDate}}</p>
+          </div>
+          <div class="col-md-10">
+            <p>
+              <strong>{{userComment.username}}</strong>
+              <span class="float-right"><i class="text-warning fa fa-star"></i></span>
+              <span class="float-right"><i class="text-warning fa fa-star"></i></span>
+              <span class="float-right"><i class="text-warning fa fa-star"></i></span>
+              <span class="float-right"><i class="text-warning fa fa-star"></i></span>
+
+            </p>
+            <div class="clearfix"></div>
+            <p>{{userComment.comment}}</p>
+          </div>
+        </div>
+         <br>
+      </div>
+    </div>
+  </div>
 </div>
