Modify others things

--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -7,6 +7,11 @@
             <label for="email">E-mail</label><br>
             <input type="email" id="email" name="email" formControlName="email" class="form-control">
         </div>
+        <div class="form-group " >
+            <label for="username">Nom d'utilisateur</label><br>
+            <input type="username" id="username" name="username" formControlName="username" class="form-control">
+        </div>
+       
         <div class="form-group">
             <label for="password">Mot de passe</label><br>
             <input type="password" id="password" name="password" formControlName="password" class="form-control">
