--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -7,7 +7,7 @@
    <div class="collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav mr-auto">
        <li class="nav-item active">
-         <a class="nav-link" routerLink="#">Articles</a>
+         <a class="nav-link" routerLink="/posts/allposts">Articles</a>
        </li>
        <li class="nav-item">
          <a class="nav-link" routerLink="">A propos</a>
